Update Event service with delete functionality
Added a "delete" method in the Event Service and its implementation, allowing events to be deleted given certain permissions. Additional test scenarios for this feature have also been introduced. Minor code format improvements were made in several classes.